--- a/app/07product/views/product.html
+++ b/app/07product/views/product.html
@@ -1,81 +1,44 @@
 <style type="text/css">
-  form.tab-form-demo .tab-pane {
-    margin: 20px 20px;
-  }
+	form.tab-form-demo .tab-pane {
+		margin: 20px 20px;
+	}
 </style>
 
 <div class="col-sm-12" style="background: #fff; padding-top: 15px;">
-    <uib-tabset active="activeForm" class="nav nav-tabs nav-justified">
+	<uib-tabset active="activeForm" class="nav nav-tabs nav-justified">
 
-      <uib-tab index="0" heading="基本信息">
-        <productbaseinfo
-          saleobj="saleobj"
-          baseinfo="baseinfo"
-          util="util"
-          funobj="funobj"
-        ></productbaseinfo>
-      </uib-tab>
+		<uib-tab index="0" heading="基本信息">
+			<productbaseinfo saleobj="saleobj" baseinfo="baseinfo" util="util" funobj="funobj"></productbaseinfo>
+		</uib-tab>
 
-      <uib-tab index="1" heading="限制信息"
-      ng-if="saleobj.id !== '' && saleobj.code !== ''">
-        <restrictrule
-          saleobj="saleobj"
-          baseinfo="baseinfo"
-          util="util"
-          funobj="funobj"
-        ></restrictrule>
-      </uib-tab>
+		<uib-tab index="1" heading="限制信息" ng-if="saleobj.id !== '' && saleobj.code !== ''">
+			<restrictrule saleobj="saleobj" baseinfo="baseinfo" util="util" funobj="funobj"></restrictrule>
+		</uib-tab>
 
-      <uib-tab index="2" heading="图文信息"
-      ng-if="saleobj.id !== '' && saleobj.code !== ''">
-        <imgtextinfo
-          saleobj="saleobj"
-          baseinfo="baseinfo"
-          util="util"
-          funobj="funobj"
-        ></imgtextinfo>
-      </uib-tab>
+		<uib-tab index="2" heading="图文信息" ng-if="saleobj.id !== '' && saleobj.code !== ''">
+			<imgtextinfo saleobj="saleobj" baseinfo="baseinfo" util="util" funobj="funobj"></imgtextinfo>
+		</uib-tab>
 
-      <uib-tab index="3" heading="票种信息" 
-      ng-if="saleobj.id !== '' && saleobj.code !== ''">
-        <producttickettype
-          saleobj="saleobj"
-          util="util"
-        ></producttickettype>
-      </uib-tab>
+		<uib-tab index="3" heading="票种信息" ng-if="saleobj.id !== '' && saleobj.code !== ''">
+			<producttickettype saleobj="saleobj" util="util"></producttickettype>
+		</uib-tab>
 
-      <uib-tab index="4" heading="系统确认项" 
-      ng-if="saleobj.code !== '' && saleobj.sys_affirm_type == 0">
-        <productaffirm
-          saleobj="saleobj"
-          util="util"
-        ></productaffirm>
-      </uib-tab>
-      
-      <uib-tab index="5" heading="限时购" 
-      ng-if="saleobj.code !== '' && funobj.hasOwnProperty('flashsale')">
-        <productflashsale
-          saleobj="saleobj"
-          util="util"
-        ></productflashsale>
-      </uib-tab>
+		<uib-tab index="4" heading="系统确认项" ng-if="saleobj.code !== '' && saleobj.sys_affirm_type == 0">
+			<productaffirm saleobj="saleobj" util="util"></productaffirm>
+		</uib-tab>
 
-      <uib-tab index="6" heading="配置积分" 
-      ng-if="saleobj.code !== '' && funobj.hasOwnProperty('integral')">
-        <productintegral
-          saleobj="saleobj"
-          util="util"
-        ></productintegral>
-      </uib-tab>
+		<uib-tab index="5" heading="限时购" ng-if="saleobj.code !== '' && funobj.hasOwnProperty('flashsale')">
+			<productflashsale saleobj="saleobj" util="util"></productflashsale>
+		</uib-tab>
 
-      <uib-tab index="7" heading="销售品分润设置" 
-      ng-if="saleobj.id !== '' && funobj.hasOwnProperty('skprice')">
-        <productshareprofit
-          saleobj="saleobj"
-          util="util"
-        ></productshareprofit>
-      </uib-tab>
+		<uib-tab index="6" heading="配置积分" ng-if="saleobj.code !== '' && funobj.hasOwnProperty('integral')">
+			<productintegral saleobj="saleobj" util="util"></productintegral>
+		</uib-tab>
 
-    </uib-tabset>
+		<uib-tab index="7" heading="销售品分润设置" ng-if="saleobj.id !== '' && funobj.hasOwnProperty('skprice')">
+			<productshareprofit saleobj="saleobj" util="util"></productshareprofit>
+		</uib-tab>
+
+	</uib-tabset>
 
 </div>
