--- a/app/07product/views/aplist.html
+++ b/app/07product/views/aplist.html
@@ -1,77 +1,65 @@
 <div class="col-sm-12">
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="form-group form-inline">
-            <div class="col-sm-10">
-                <label>产品名称</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="searchform.name" >
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <label>产品编号</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="searchform.code" >
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <label>景区编号</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="searchform.place_code" >
-                <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
-            </div>
-            <div class="col-sm-2 text-right">
-                <button type="button" class="btn btn-info new" ng-click="create()">创建产品</button>
-            </div>
-        </div>
-    </div>
-</div><!-- searchArea -->
+	<div class="panel panel-default">
+		<div class="panel-body">
+			<div class="form-group form-inline">
+				<div class="col-sm-10">
+					<label>产品名称</label>&nbsp;&nbsp;
+					<input type="text" class="form-control" ng-model="searchform.name"> &nbsp;&nbsp;&nbsp;&nbsp;
+					<label>产品编号</label>&nbsp;&nbsp;
+					<input type="text" class="form-control" ng-model="searchform.code"> &nbsp;&nbsp;&nbsp;&nbsp;
+					<label>景区编号</label>&nbsp;&nbsp;
+					<input type="text" class="form-control" ng-model="searchform.place_code">
+					<button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
+				</div>
+				<div class="col-sm-2 text-right">
+					<button type="button" class="btn btn-info new" ng-click="create()">创建产品</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- searchArea -->
 
 
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th class="col-md-3 text-center">产品</th>
-        <th class="col-md-2 text-center">供应商</th>
-        <th class="col-md-2 text-center">产品分类</th>
-        <th class="col-md-1 text-center">成本价</th>
-        <th class="col-md-1 text-center">指导价</th>
-        <th class="col-md-1 text-center">市场价</th>
-        <th class="col-md-1 text-center">操作</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="obj in objs">
-        <td class="">
-          产品名称：{{obj.name}}<br>
-          产品编号：{{obj.code}}<br>
-        </td>
-        <td class="text-center">{{obj.create_company_code}}</td>
-        <td class="text-center">{{obj.sale_category_name}}</td>
-        <td class="text-center">{{obj.cost_price}}</td>
-        <td class="text-center">{{obj.guide_price}}</td>
-        <td class="text-center">{{obj.market_price}}</td>
-        <td class="text-center">
-          <a ng-click="info(obj.id)" class="btn btn-warning btn-xs">详情</a>
-          <!--<a ng-click="pass(obj.id)" class="btn btn-success btn-xs">审核通过</a>
+	<table class="table table-bordered">
+		<thead>
+			<tr>
+				<th class="col-md-3 text-center">产品</th>
+				<th class="col-md-2 text-center">供应商</th>
+				<th class="col-md-2 text-center">产品分类</th>
+				<th class="col-md-1 text-center">成本价</th>
+				<th class="col-md-1 text-center">指导价</th>
+				<th class="col-md-1 text-center">市场价</th>
+				<th class="col-md-1 text-center">操作</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="obj in objs">
+				<td class="">
+					产品名称：{{obj.name}}<br> 产品编号：{{obj.code}}
+					<br>
+				</td>
+				<td class="text-center">{{obj.create_company_code}}</td>
+				<td class="text-center">{{obj.sale_category_name}}</td>
+				<td class="text-center">{{obj.cost_price}}</td>
+				<td class="text-center">{{obj.guide_price}}</td>
+				<td class="text-center">{{obj.market_price}}</td>
+				<td class="text-center">
+					<a ng-click="info(obj.id)" class="btn btn-warning btn-xs">详情</a>
+					<!--<a ng-click="pass(obj.id)" class="btn btn-success btn-xs">审核通过</a>
           <a ng-click="nopass(obj.id)" class="btn btn-danger btn-xs">审核不通过</a>-->
-        </td>
-      </tr>
-    </tbody>
-  </table>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 
 
-  <div class="text-right">
+	<div class="text-right">
 
-    <uib-pagination 
-      total-items="bigTotalItems" 
-      ng-model="bigCurrentPage" 
-      max-size="maxSize" 
-      class="pagination-sm" 
-      boundary-links="true" 
-      ng-change="load()"
-      items-per-page="itemsPerPage"
-      previous-text="上一页"
-      next-text="下一页"
-      first-text="首页"
-      last-text="末页"
-      rotate="false">
-    </uib-pagination>
+		<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
+		 ng-change="load()" items-per-page="itemsPerPage" previous-text="上一页" next-text="下一页" first-text="首页" last-text="末页" rotate="false">
+		</uib-pagination>
 
-  </div>
-  
+	</div>
+
 
 </div>
