--- a/app/07product/views/restrictrule.html
+++ b/app/07product/views/restrictrule.html
@@ -82,29 +82,40 @@
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-2 col-xs-12 control-label">最大限制</label>
+			<label class="col-sm-2 col-xs-12 control-label">限制信息</label>
 			<div class="col-sm-4 col-xs-12">
-				<input type="number" class="form-control" ng-model="saleobj.max_limit" ng-disabled="util.what == 'info'">
-
 			</div>
-			<div class="col-sm-6 col-xs-12">
-				<p class="form-control-static text-danger">
-					用户累积购买数量限制，0:不限，其他数字:限制购买个数
-				</p>
+			<div class="col-sm-6 mt10">
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label class="col-sm-2 col-xs-12 control-label">每单限制</label>
-			<div class="col-sm-4 col-xs-12">
-				<input type="number" class="form-control" ng-model="saleobj.order_num_limit" ng-disabled="util.what == 'info'">
+		<div class="panel panel-default">
+			<br/>
+			<div class="form-group">
+				<label class="col-sm-2 col-xs-12 control-label">最大限制</label>
+				<div class="col-sm-4 col-xs-12">
+					<input type="number" class="form-control" ng-model="saleobj.max_limit" ng-disabled="util.what == 'info'">
+				</div>
+				<div class="col-sm-6 col-xs-12">
+					<p class="form-control-static text-danger">
+						用户累积购买数量限制，0:不限，其他数字:限制购买个数
+					</p>
+				</div>
+			</div>
 
+			<div class="form-group">
+				<label class="col-sm-2 col-xs-12 control-label">每单限制</label>
+				<div class="col-sm-4 col-xs-12">
+					<input type="number" class="form-control" ng-model="saleobj.order_num_limit" ng-disabled="util.what == 'info'">
+
+				</div>
+				<div class="col-sm-6 col-xs-12">
+					<p class="form-control-static text-danger">
+						用户每次下单购买数量限制，0:不限，其他数字:限制购买个数
+					</p>
+				</div>
 			</div>
-			<div class="col-sm-6 col-xs-12">
-				<p class="form-control-static text-danger">
-					用户每次下单购买数量限制，0:不限，其他数字:限制购买个数
-				</p>
-			</div>
+
 		</div>
 
 		<div class="form-group">
