--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -165,7 +165,7 @@
 
 		<div class="form-group">
 			<form class="form-inline">
-				<label class="col-sm-2 col-xs-12 control-label">有效期始</label>&nbsp;&nbsp;
+				<label class="col-sm-2 col-xs-12 control-label">有效期始</label>
 				<div class="col-sm-4">
 					<div class="input-group">
 						<input type="text" class="form-control" ng-model="baseinfo.dateshow.periodstart.date" uib-datepicker-popup="yyyy-MM-dd" is-open="baseinfo.dateshow.periodstart.opened"
@@ -180,17 +180,16 @@
 					</div>
 
 			</form>
-			&nbsp;&nbsp;&nbsp;&nbsp;
 			</div>
 			<div class="col-sm-6">
-				<font face="Courier" class="text-danger">产品可用时间开始时间</font>
+				<p class="form-control-static text-danger">产品可用时间开始时间</p>
 			</div>
 		</div>
 
 
 		<div class="form-group">
 			<form class="form-inline">
-				<label class="col-sm-2 col-xs-12 control-label">有效期止</label>&nbsp;&nbsp;
+				<label class="col-sm-2 col-xs-12 control-label">有效期止</label>
 				<div class="col-sm-4">
 
 					<div class="input-group">
@@ -205,10 +204,9 @@
 					</span>
 					</div>
 			</form>
-			&nbsp;&nbsp;&nbsp;&nbsp;
 			</div>
 			<div class="col-sm-6">
-				<font face="Courier" class="text-danger">产品可用时间结束时间</font>
+				<p class="form-control-static text-danger">产品可用时间结束时间</p>
 			</div>
 		</div>
 
