--- a/app/07product/views/restrictrule.html
+++ b/app/07product/views/restrictrule.html
@@ -82,7 +82,7 @@
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-2 col-xs-12 control-label">限制信息</label>
+			<label class="col-sm-2 col-xs-12 control-label">数量限制</label>
 			<div class="col-sm-4 col-xs-12">
 			</div>
 			<div class="col-sm-6 mt10">
