数据没有返回的返回完全了

--- a/app/22busscustomer/views/addheadline.html
+++ b/app/22busscustomer/views/addheadline.html
@@ -64,7 +64,7 @@
  <label for="inputDate" class="col-sm-4 control-label">发布人：</label>
  <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="info.activity_proposer_card"
+      ng-model="info.publisher"
       >
  </div>    
  </div>
